Bug 457270 - Line tool: shift-line doesn't support pressure sensitivity
Summary: Line tool: shift-line doesn't support pressure sensitivity
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Compiled Sources All
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-07-29 13:06 UTC by acc4commissions
Modified: 2022-08-23 00:32 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
capture (18.21 KB, image/png)
2022-07-29 13:06 UTC, acc4commissions
Details
basic-4 flow opacity (42.71 KB, image/png)
2022-08-02 07:22 UTC, acc4commissions
Details
The Line Tool behaves strangely with the preview and pressure sensitivity. (1.20 MB, video/webm)
2022-08-17 20:50 UTC, LaTor
Details

Note You need to log in before you can comment on or make changes to this bug.
Description acc4commissions 2022-07-29 13:06:51 UTC
Created attachment 150976 [details]
capture

SUMMARY
git c290356 

The normal behaviour was close to the current Line Tool + Shift behavior as far as I remember.


STEPS TO REPRODUCE
1. Draw a line using line tool 
2. Draw another line next to it using line tool, but with shift modifier to align the angle.
3. Compare the results.

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Halla Rempt 2022-08-01 13:05:54 UTC
I cannot reproduce this -- which brush preset were you using? I was using basic-4 flow opacity
Comment 2 acc4commissions 2022-08-02 07:22:19 UTC
Created attachment 151066 [details]
basic-4 flow opacity

It seems happen with across all prush presets.
Comment 3 Halla Rempt 2022-08-02 07:37:18 UTC
Ah, I was testing with a mouse, you were testing with a pen. Looks like the constrained line doesn't react to pressure at all.
Comment 4 acc4commissions 2022-08-02 11:13:57 UTC
(In reply to Halla Rempt from comment #3)
> Ah, I was testing with a mouse, you were testing with a pen. Looks like the
> constrained line doesn't react to pressure at all.

no, as far as I observed, I think the shift-line support the pen pressure properly, and the normal line is the one has the odd falloff and it alwasy makes the end of the line pale no matter how hard I press.
Comment 5 Ahab Greybeard 2022-08-03 13:23:11 UTC
This is a regression wrt the 5.1.0-beta2 which has correct behaviour for the non-contrained line.

If the Shift key is pressed and held part way through drawing a line then the pressure vs distance record is partly restored.
Comment 6 LaTor 2022-08-17 20:50:38 UTC
Created attachment 151388 [details]
The Line Tool behaves strangely with the preview and pressure sensitivity.

Hi,

When I use the tool, pressing the hotkey or activating the tool, while drawing the line, a preview of the line is show and then when I stop the line, the line on the canvas is not the same as the preview. When I press “Shift” while using the tool, the line on the canvas does match the preview seen. I also cannot control the line pressure, pressing "Shift" or just using the tool, and it always creates the same lines.

I have attached a video that I hope demonstrates the described problem.

System Information
KDE Plasma on Linux Mint 20.3
XP-Pen Artist 22E Pro
Krita 5.2.0 Prealpha Nightly (Observed in yesterday’s and today’s nightly)
Comment 7 Bug Janitor Service 2022-08-19 16:53:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1548
Comment 8 Tiar 2022-08-23 00:32:47 UTC
Git commit 1d06a6530880026e9186892f1ef4bf5f6a095d3b by Agata Cacko.
Committed on 22/08/2022 at 23:46.
Pushed by tymond into branch 'master'.

Fix Line Tool pressure issues

Before this commit, Line Tool would drop all pressure
information when used without any modifier.
This commit restores the old behaviour of keeping the pressure
information and using it to paint the line.

M  +14   -7    plugins/tools/basictools/kis_tool_line_helper.cpp

https://invent.kde.org/graphics/krita/commit/1d06a6530880026e9186892f1ef4bf5f6a095d3b