Fix Line Tool pressure issues

Before this commit, Line Tool would drop all pressure
information when used without any modifier.
This commit restores the old behaviour of keeping the pressure
information and using it to paint the line.

BUG:457270